@@ -26,8 +26,8 @@
 #include <CGAL/squared_distance_2.h> 
 #include <CGAL/number_utils.h>
 #include <CGAL/Nef_2/Nef_polynomial.h>
-#undef _DEBUG
-#define _DEBUG 5
+#undef CGAL_NEF_DEBUG
+#define CGAL_NEF_DEBUG 5
 #include <CGAL/Nef_2/debug.h>
 #include <CGAL/Nef_2/Line_to_epoint.h>
 
