@@ -29,8 +29,8 @@
 //#include <CGAL/Number_type_traits.h>
 //#include <CGAL/IO/io.h>
 #include <cstddef>
-#undef _DEBUG
-#define _DEBUG 3
+#undef CGAL_NEF_DEBUG
+#define CGAL_NEF_DEBUG 3
 #include <CGAL/Nef_2/debug.h>
 #include <vector>
 
