@@ -37,8 +37,8 @@
 #include <vector>
 #include <list>
 
-#undef _DEBUG
-#define _DEBUG 11
+#undef CGAL_NEF_DEBUG
+#define CGAL_NEF_DEBUG 11
 #include <CGAL/Nef_2/debug.h>
 
 CGAL_BEGIN_NAMESPACE
